[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/props/prop_bomb.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sfx/bomb_explosion.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/get_supply.wav" type="AudioStream" id=3]
[ext_resource path="res://src/characters/props/Bomb.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.0

[node name="Bomb" type="Area2D"]
position = Vector2( 539, 541 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, 3 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.5, 595 )
scale = Vector2( 53.55, 113.9 )

[node name="BombSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="GetSupply" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="BombSound" to="." method="_on_BombSound_finished"]
